fix visual shifting when changing page

--- a/css/styles.css
+++ b/css/styles.css
@@ -167,6 +167,7 @@ body {
 
   #my-profile {
     width: clamp(0px,60%,300px);
+    aspect-ratio: 338/323;
   }
 
   .main-container {
